change testb to say donkey

--- a/MaterialsWall/Views/Home/_WallCard.cshtml
+++ b/MaterialsWall/Views/Home/_WallCard.cshtml
@@ -6,7 +6,7 @@
             <img src="@Url.Action("Thumbnail", "Image", new { identifier = @Model.Identifier })" title="@Model.Name"/>
                     
             <div class="details">
-                <div class="materialname">@Model.Name</div>hujjhkkhuh
+                <div class="materialname">@Model.Name</div> Donkey
                 <div class="materialpath">@Model.Path</div>
             </div>
         </div></a>
